bft-meal-plans-site/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bft-challenge
  labels:
    name: bft-challenge
    app.kubernetes.io/name: bft-challenge
    app.kubernetes.io/part-of: bft-challenge
