bft-meal-plans-site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bft-meal-plans-service
  namespace: bft-challenge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bft-meal-plans
